--- a/classification_stars/Классификатия типов звезд.ipynb
+++ b/classification_stars/Классификатия типов звезд.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
        "4         1939  0.000138  0.1030  20.06   Red              M     0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "max    40000.000000  849420.000000  1948.500000   20.060000    5.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "Name: Spectral_Class, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -451,20 +451,20 @@
        "yellow-white            8\n",
        "White                   7\n",
        "Blue white              4\n",
-       "white                   3\n",
        "Yellowish White         3\n",
-       "Orange                  2\n",
+       "white                   3\n",
        "yellowish               2\n",
+       "Orange                  2\n",
        "Whitish                 2\n",
-       "White-Yellow            1\n",
-       "Orange-Red              1\n",
-       "Pale yellow orange      1\n",
        "Yellowish               1\n",
+       "Orange-Red              1\n",
+       "White-Yellow            1\n",
+       "Pale yellow orange      1\n",
        "Blue-White              1\n",
        "Name: Color, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,7 +482,7 @@
     "   1. Даже не вооруженным взлядом видно, что распределения данных далеки от нормальности, и если осуществлять проверки гипотез, то это надо делать непараметрическими методами.\n",
     "   2. Дисбаланс классов нет (что может не радовать:) )\n",
     "   3. Дисбаланс есть в категориальных признаках, конечно рано говорить что нибудь по этому поводу, нужно провести исследовательский анализ, а там видно будет, что с этим можно сделать.\n",
-    "   4. Так же наблюдаются значения, которое отбиваются от среднего, но так как у нас класов более чем 2 то это может сыграть на руку\n"
+    "   4. Так же наблюдаются значения, которое отбиваются от среднего, но так как у нас класов более чем 2, то это может сыграть на руку\n"
    ]
   },
   {
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "((180, 26), (60, 26))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,15 +1011,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fit_model(model, params):\n",
     "    grid_model = GridSearchCV(model, scoring='accuracy', cv=5, param_grid=params)\n",
     "    grid_model.fit(X_train, y_train)\n",
-    "    print(grid_model.best_params_)\n",
-    "    print(classification_report(y_test, grid_model.predict(X_test)))\n",
+    "    print(f'Лучшие параметры: {grid_model.best_params_}')\n",
+    "    print('Scores:')\n",
+    "    print('---------------------------------------------------------')\n",
+    "    print(classification_report(y_train, grid_model.predict(X_train)))\n",
     "    return grid_model.best_estimator_"
    ]
   },
@@ -1034,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,26 +1047,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_depth': 5, 'max_leaf_nodes': None, 'min_samples_leaf': 10}\n",
+      "Лучшие параметры: {'max_depth': 5, 'max_leaf_nodes': None, 'min_samples_leaf': 10}\n",
+      "Scores:\n",
+      "---------------------------------------------------------\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      1.00      1.00        10\n",
-      "           1       1.00      1.00      1.00        11\n",
-      "           2       1.00      1.00      1.00         9\n",
-      "           3       1.00      1.00      1.00         9\n",
-      "           4       1.00      1.00      1.00         9\n",
-      "           5       1.00      1.00      1.00        12\n",
+      "           0       1.00      1.00      1.00        30\n",
+      "           1       1.00      1.00      1.00        29\n",
+      "           2       1.00      1.00      1.00        31\n",
+      "           3       1.00      1.00      1.00        31\n",
+      "           4       1.00      1.00      1.00        31\n",
+      "           5       1.00      1.00      1.00        28\n",
       "\n",
-      "    accuracy                           1.00        60\n",
-      "   macro avg       1.00      1.00      1.00        60\n",
-      "weighted avg       1.00      1.00      1.00        60\n",
+      "    accuracy                           1.00       180\n",
+      "   macro avg       1.00      1.00      1.00       180\n",
+      "weighted avg       1.00      1.00      1.00       180\n",
       "\n"
      ]
     }
@@ -1082,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1268,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1295,6 +1299,48 @@
    ],
    "source": [
     "fearure.sort_values(by='feature_importances', ascending=False).plot(kind='bar', figsize=(10,5), grid=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='5'>\n",
+    "    \n",
+    "## 5. Проверка модели на тестовых данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scores:\n",
+      "--------------------------------------------------------\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00        10\n",
+      "           1       1.00      1.00      1.00        11\n",
+      "           2       1.00      1.00      1.00         9\n",
+      "           3       1.00      1.00      1.00         9\n",
+      "           4       1.00      1.00      1.00         9\n",
+      "           5       1.00      1.00      1.00        12\n",
+      "\n",
+      "    accuracy                           1.00        60\n",
+      "   macro avg       1.00      1.00      1.00        60\n",
+      "weighted avg       1.00      1.00      1.00        60\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Scores:')\n",
+    "print('--------------------------------------------------------')\n",
+    "print(classification_report(y_test, dtc.predict(X_test)))"
    ]
   },
   {
