--- a/cost_optimization/Проект по оптимизации расходов.ipynb
+++ b/cost_optimization/Проект по оптимизации расходов.ipynb
@@ -1940,7 +1940,7 @@
     "id": "yHa77ttFsHTa"
    },
    "source": [
-    "Данных не мало, почти во всех есть пропуски, но при нашей задачи основной датафрейм это `df_temp`, где хранятся данные по замерам температуры. На первый взгляд это работа с времмеными рядами. Но сделаем вывод когда уточним все вопросы)"
+    "Данных не мало, почти во всех есть пропуски, но при нашей задачи основной датафрейм это `df_temp`, где хранятся данные по замерам температуры. На первый взгляд это работа с времмеными рядами, но сделаем вывод, когда уточним все вопросы)"
    ]
   },
   {
@@ -1960,7 +1960,7 @@
     "id": "cYT4v8AYsHTb"
    },
    "source": [
-    "У нас стоит задача предсказания температуры стали, а задача для предприятия уменьшить электропотребление, значит в первую очередь посмотрим на данные в `df_arc`, где показана мощьность электродов. Сгенерируем еще 2 переменные, которая показывает время нагрева дугой и которая показывает полную мощность, и посмотрим как распеределены эти данные."
+    "У нас стоит задача предсказания температуры стали, а задача для предприятия уменьшить электропотребление, значит в первую очередь посмотрим на данные в `df_arc`, где показана мощьность электродов. Сгенерируем еще 2 переменные, которая показывает время нагрева дугой иполную мощность, и посмотрим как распеределены эти данные."
    ]
   },
   {
@@ -2305,6 +2305,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "При средней температуры стали в 1500 градусов, эти значения выбиваются. Поэтому удалим их."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
@@ -2438,15 +2445,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "XZism3blsHTe"
-   },
-   "source": [
-    "Эти значения явно отбились от общей группы, хотелось бы знать причину этому явлению, иначе они нам все предсказания испортят"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "4P5ckq9gsHTf"
    },
    "source": [
@@ -2553,7 +2551,7 @@
     "   - 7 таблиц, которые несут различную информацию по времени, подачи материалов, измерения температуры и данные по электродам.\n",
     "   - Наша задача построить модель которая предскажет температуру в ковше, для уменьшение электропотребления.\n",
     "   \n",
-    "Следовательно есть вопрос от чего зависит температура в ковше, судя по данным она от них не зависит?\n",
+    "Следовательно есть вопрос, от чего зависит температура в ковше, судя по данным она от них не зависит?\n",
     "Средняя температура 1591 градус, то есть она должна не сильно отклоняться от среднего?\n",
     "Так же не понятно, как происходят замеры температуры, сколько всего дожно быть замеров у партии, т.к. у одной партии эти значения варьируются от 1 до 16?\n",
     "Плюс в целевой переменной достаточно много пропусков, и от этих вопросов, будет зависить что с ними делать, удалять или восстанавливать."
@@ -2570,7 +2568,7 @@
     "\n",
     "Если временные ряды, то так как ряд стационарный, можно использовать семейства моделей АРИМА, либо другие регрессионные модели, такие как линейная регреессия и бустинги.\n",
     "\n",
-    "Если у нас задачи обычных табличных данных, то подойте все тоже самое, кроме моделей АРИМА\n",
+    "Если у нас задачи обычных табличных данных, то подойт все тоже самое, кроме моделей АРИМА\n",
     "   "
    ]
   },
@@ -2591,15 +2589,16 @@
     "id": "euuDuMiQsHTh"
    },
    "source": [
-    "И так мы выяснили, изменение температуры у нас зависит от множество факторов, которые порой тяжело предсказать. Но у нас есть различная информация, которая также имеет влияние на температуру. Следовательно нужно все таблицы объеденить в одну. Теперь как мы это будем делать. Нам известен целевой признак, который предстоит предсказывать, это последнее измерение температуры партии, то есть темперетура, которая получается на выходе партии. Какие таблицы у нас имееются:\n",
+    "И так мы выяснили, изменение температуры у нас зависит от множество факторов, которые порой тяжело предсказать. Но у нас есть различная информация, которая также имеет влияние на температуру. Следовательно нужно все таблицы объединить в одну. Теперь как мы это будем делать. Нам известен целевой признак, который предстоит предсказывать, это последнее измерение температуры партии, то есть темперетура, которая получается на выходе партии. Какие таблицы у нас имееются:\n",
     "   - data_arc.csv — данные об электродах;\n",
     "   - data_bulk.csv — данные о подаче сыпучих материалов (объём);\n",
     "   - data_bulk_time.csv — данные о подаче сыпучих материалов (время);\n",
     "   - data_gas.csv — данные о продувке сплава газом;\n",
     "   - data_temp.csv — результаты измерения температуры;\n",
     "   - data_wire.csv — данные о проволочных материалах (объём);\n",
-    "   - data_wire_time.csv — данные о проволочных материалах (время).\n",
-    "Из всех таблиц нам не потребутся только 2 это `data_bulk_time.csv` и `data_wire_time.csv` потому что данные о времени, когда были добавлены эти присадки, в модели на точно не нужны. Данные по температуре и электродам нам придется агрегировать, если по температуре мы знаем какой признак от туда вытянуть, то с электродами не все так очевидно. С этой таблицой нужно поэксперементировать. Во первых, мной в иследовательском анализе были сгенерированы дополнительные фитчи, которые также будут учавствовать в обучение, а выбор агрегирующей функции нам предстоит выбрать, либо сумма, либо среднее."
+    "   - data_wire_time.csv — данные о проволочных материалах (время)\n",
+    "\n",
+    "Из всех таблиц нам не потребутся только 2 это `data_bulk_time.csv` и `data_wire_time.csv`, потому что данные о времени, когда были добавлены эти присадки, в модели точно не нужны. Данные по температуре и электродам нам придется агрегировать, если по температуре мы знаем какой признак от туда вытянуть, то с электродами не все так очевидно. С этой таблицой нужно поэксперементировать. Во первых, мной в иследовательском анализе были сгенерированы дополнительные фитчи, которые также будут учавствовать в обучение."
    ]
   },
   {
@@ -3122,7 +3121,7 @@
     "id": "HnkopmQSsHTn"
    },
    "source": [
-    "Признаков получилось не мало, но все они могут оказаться бесполезны, из них нужно отобрать только те которые хорошо описывают нашу целевую переменную. Посмотрим какая зависимость между признаками и целевой переменной.."
+    "Признаков получилось не мало, но все они могут оказаться бесполезны, из них нужно отобрать только те, которые хорошо описывают нашу целевую переменную. Посмотрим какая зависимость между признаками и целевой переменной.."
    ]
   },
   {
@@ -3207,7 +3206,7 @@
     "id": "7xdEvt_bsHTo"
    },
    "source": [
-    "Тут есть прям явные признаки мультиколлиниарности, достаточно сильно между собой коррелируют сумарная активная мощьность и сумарное время нагрева дугой и отрицательную коллиниарность имееют сумарная полная мощность и сумарная реактивная мощность. Из графика зависимости целевой переменной от всех принаков видно, что в сумарной активной и реактивной мощности наблюдается ярый выброс которой в наши данные привносил путаницу, а если его убрать, то все значения стату близкие к 0, и зависимость с целевым признаком будет отсутствовать, поэтому эти 2 признака удалим. Что касается сумарной активной мощности и сумарное время нагрева дугой пока оставим посмотрим на регрессионной модели какой признак окажется важным."
+    "Тут есть прям явные признаки мультиколлиниарности, достаточно сильно между собой коррелируют суммарная активная мощность и сумарное время нагрева дугой и отрицательную коллиниарность имееют суммарная полная мощность и суммарная реактивная мощность. Из графика зависимости целевой переменной от всех принаков видно, что в сумарной активной и реактивной мощности наблюдается ярый выброс, которой в наши данные привносит путаницу, а если его убрать, то все значения станут близкие к 0, и зависимость с целевым признаком будет отсутствовать, поэтому эти 2 признака удалим. Что касается суммарной активной мощности и суммарное время нагрева дугой пока оставим, посмотрим на регрессионной модели какой признак окажется важным."
    ]
   },
   {
@@ -3658,7 +3657,7 @@
     "id": "bmuz50IlsHTr"
    },
    "source": [
-    "Как мы видим некоторые признаки обнулены, то есть они не превносят никакого вклада. Отберем нужные признаки, для этого зададим порог 0.3. Выбран исходя из соображений что не слишком много признаков отсеиваются и превносить вклад будет кажый признак"
+    "Как мы видим некоторые признаки обнулены, то есть они не превносят никакого вклада. Отберем нужные признаки, для этого зададим порог 0.3. Выбран исходя из соображений, что не слишком много признаков отсеиваются и превносить вклад будет каждый признак"
    ]
   },
   {
@@ -3858,7 +3857,7 @@
     "id": "NcJe5jkLsHTu"
    },
    "source": [
-    "Тут у нас получился самый лучший результат, теперь епроверим нашу лучшую модель на тестовых данных\n"
+    "Тут у нас получился самый лучший результат, теперь проверим нашу лучшую модель на тестовых данных\n"
    ]
   },
   {
@@ -3878,7 +3877,7 @@
     "id": "qpGJtIZSsHTv"
    },
    "source": [
-    "Но сначала сделаем преобразования и отберем те признаки которые учавствовали у нас в обучении"
+    "Но сначала сделаем преобразования и отберем, те признаки которые учавствовали у нас в обучении"
    ]
   },
   {
@@ -3939,7 +3938,7 @@
     "id": "OPKtnohasHTw"
    },
    "source": [
-    "И так проведя иследовательский анализ и обучение моделей нам стало понятно, что для предсказания температуры на выходе нам все признаки не нужны, помимо этого есть признаки, которые мы сгенерировали и они внесли очень хороший вклад в описания нашей целевой переменной. Результат оказался достаточно хорошим, для предсказания температуры на выходе. Не малый вклад внесла переменная `Температура на входе` этому параметру стоит уделить внимание и она должна быть около 1600 градусов иначе все предсказания поплывут, да и этот параметр важен в дальнейшем нагреве. Если он будет слишком низким придется увеличить время нагрева дугой, от этого затраты мощности будут больше."
+    "И так, проведя иследовательский анализ и обучение моделей нам стало понятно, что для предсказания температуры на выходе нам все признаки не нужны, помимо этого есть признаки, которые мы сгенерировали и они внесли очень хороший вклад в описания нашей целевой переменной. Результат оказался достаточно хорошим для предсказания температуры на выходе. Не малый вклад внесла переменная `Температура на входе` этому параметру стоит уделить внимание и она должна быть около 1600 градусов иначе все предсказания поплывут, да и этот параметр важен в дальнейшем нагреве. Если он будет слишком низким придется увеличить время нагрева дугой, от этого затраты мощности будут больше."
    ]
   },
   {
@@ -3965,15 +3964,15 @@
     "\n",
     "   2. Исследовательтский анализ.\n",
     "\n",
-    "Посмотрели на зависимость температуры от времени в таблице `df_temp`, определили выбросы и удалили их. Сгененерировали дополнительные признаки в таблице `df_arc`, время нагрева дугой и полная мощньсть. Посмотрели на их распределения, такж определили выброс. Задали интересующие вопросы\n",
+    "Посмотрели на зависимость температуры от времени в таблице `df_temp`, определили выбросы и удалили их. Сгененерировали дополнительные признаки в таблице `df_arc`, время нагрева дугой и полная мощнсть. Посмотрели на их распределения, также определили выброс. Задали интересующие вопросы\n",
     "\n",
     "   3. Подготовка данных к обучению.\n",
     "\n",
-    "Так как мы не знаем какой признак может себя проявить в обучении, то в таблице `df_arc` сгенерировали еще 2 дополнительные фитчи, отношение активной мощности к реактивной и доля активной мощности, сгрупировали по ключу партии с сумированием по всем признакам. Слегка преобразуем таблицу `df_temp`, данные сгруппируем по ключу партии вывели целевой признак (последнее измерение температуры) и дополнительный признак для обучения (первое измерение температуры). Произвели слияение всех таблиц в общий датафрейм. Посмотрели как зависит целевая переменная от каждого признака и как коррелируют признаки между собой. Определил 2 бесполезные фитчи (сумма полной мощности и сумма реактивной мощности) удалили их. Разделили данные на тренировачную и тестовую выборки.\n",
+    "Так как мы не знаем какой признак может себя проявить в обучении, то в таблице `df_arc` сгенерировали еще 2 дополнительные фитчи, отношение активной мощности к реактивной и доля активной мощности, сгрупировали по ключу партии с суммированием по всем признакам. Слегка преобразуем таблицу `df_temp`, данные сгруппируем по ключу партии, вывели целевой признак (последнее измерение температуры) и дополнительный признак для обучения (первое измерение температуры). Произвели слияение всех таблиц в общий датафрейм. Посмотрели как зависит целевая переменная от каждого признака и как коррелируют признаки между собой. Определил 2 бесполезные фитчи (сумма полной мощности и сумма реактивной мощности) удалили их. Разделили данные на тренировачную и тестовую выборки.\n",
     "\n",
     "   4. Обучение модели\n",
     "\n",
-    "Так как признаков поулчилось не мало, то первую модель для обучения сделали линейную регрессию с коэффициентом регуляризации L1 (LASSO) произвели расчет МАЕ на кроссвалидации он составил 7.37, так же с помощью нее отобрали нужные признаки для обучения и обучили еще две модели RandomForestRegressor и CatBoostregressor. Получили результаты МАЕ 6.40 и 6.05 соотвественно. Лучший результат показал CatBoostRegressor, ее я и выбрали для дальнейшего продвижения.\n",
+    "Так как признаков поулчилось не мало, то первую модель для обучения сделал линейную регрессию с коэффициентом регуляризации L1 (LASSO) произвели расчет МАЕ на кроссвалидации он составил 7.37, так же с помощью нее отобрали нужные признаки для обучения и обучили еще две модели RandomForestRegressor и CatBoostregressor. Получили результаты МАЕ 6.40 и 6.05 соотвественно. Лучший результат показал CatBoostRegressor, ее я и выбрали для дальнейшего продвижения.\n",
     "\n",
     "   5. Проверка модели на тестовых данных.\n",
     "\n",
